--- a/assets/styles/landingPage/_colors-dark.scss
+++ b/assets/styles/landingPage/_colors-dark.scss
@@ -13,3 +13,5 @@ $active-border-color: $active-background;
 $disabled-border-color: rgb(68, 68, 68);
 
 $modal-background: rgba(16, 18, 20, 0.65);
+
+$color-danger: rgb(188, 49, 49);
