--- a/assets/styles/landingPage/_colors-light.scss
+++ b/assets/styles/landingPage/_colors-light.scss
@@ -13,3 +13,5 @@ $active-border-color: black;
 $disabled-border-color: rgb(214, 214, 214);
 
 $modal-background: rgba(247, 248, 249, 0.65);
+
+$color-danger: rgb(188, 49, 49);
