--- a/assets/styles/landingPage/loadouts/_loadout.scss
+++ b/assets/styles/landingPage/loadouts/_loadout.scss
@@ -5,69 +5,111 @@ div.loadout {
     flex-direction: column;
     cursor: pointer;
     box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
-    width: 24%;
+    padding: 0;
+    width: 18rem;
     height: 28rem;
     border: 1px solid $border-color;
-    padding: 0.75rem;
     border-radius: 1rem;
+    overflow: hidden;
+    gap: 0.5rem;
 
-    div.preview {
-        border: 1px dashed black;
-        border-radius: 0.5rem;
-        background: radial-gradient(circle, #1c1917 1px, rgba(0, 0, 0, 0) 1px);
-        background-size: 30px 30px;
-        background-color: rgb(168, 162, 158);
+    & > .card-title {
         display: flex;
-        justify-content: center;
+        padding: 0.3rem 0.75rem;
+        border-bottom: 1px solid $border-color;
         align-items: center;
+        gap: 0.3rem;
 
-        img {
-            height: 12rem;
+        & > div.avatar {
+            width: 32px;
+            height: 32px;
+            border-radius: 50%;
+            border: 1px solid $border-color;
+            overflow: hidden;
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                vertical-align: middle;
+            }
+        }
+
+        & > .identity {
+            display: flex;
+            flex-direction: column;
+            line-height: 1;
+
+            & .username {
+                color: $muted-foreground;
+                font-size: smaller;
+            }
         }
     }
 
-    div.meta {
-        display: flex;
-        flex-direction: column;
-        flex-grow: 1;
+    & > .card-body {
+        padding: 0rem 0.75rem;
 
-        h1 {
-            margin: 0;
-            height: 2.313rem;
-            font-size: 1.5rem;
-            text-align: center;
-            border-bottom: 1px solid $border-color;
-            text-overflow: ellipsis;
-            overflow: hidden;
-        }
-
-        p {
-            margin: 0;
-            height: 6rem;
-            text-overflow: ellipsis;
-            overflow: hidden;
-        }
-
-        div.tags {
-            height: 2.313rem;
-            border-bottom: 1px solid $border-color;
+        div.preview {
+            border: 1px dashed black;
+            border-radius: 0.5rem;
+            background: radial-gradient(circle, #1c1917 1px, rgba(0, 0, 0, 0) 1px);
+            background-size: 30px 30px;
+            background-color: rgb(168, 162, 158);
             display: flex;
-            gap: 0.5rem;
-            padding: 0.3rem 0;
+            justify-content: center;
+            align-items: center;
             overflow: hidden;
 
-            div {
-                color: $muted-foreground;
-                border-radius: 0.2rem;
-                padding: 0.1rem;
-                text-wrap: nowrap;
+            img {
+                height: 12rem;
+                object-fit: cover;
+            }
+        }
+
+        div.meta {
+            display: flex;
+            flex-direction: column;
+            flex-grow: 1;
+
+            h1 {
+                margin: 0;
+                height: 2.313rem;
+                font-size: 1.5rem;
+                text-align: center;
+                border-bottom: 1px solid $border-color;
                 text-overflow: ellipsis;
+                overflow: hidden;
+            }
+
+            p {
+                margin: 0;
+                height: 4.3rem;
+                text-overflow: ellipsis;
+                overflow: hidden;
+            }
+
+            div.tags {
+                height: 2.313rem;
+                border-bottom: 1px solid $border-color;
+                display: flex;
+                gap: 0.5rem;
+                padding: 0.3rem 0;
+                overflow: hidden;
+
+                div {
+                    color: $muted-foreground;
+                    border-radius: 0.2rem;
+                    padding: 0.1rem;
+                    text-wrap: nowrap;
+                    text-overflow: ellipsis;
+                }
             }
         }
     }
 
     div.actions {
-        margin-top: 1rem;
+        margin-top: 0.3rem;
         display: flex;
         justify-content: space-between;
         gap: 0.5rem;
@@ -78,9 +120,8 @@ div.loadout {
 
         div[data-headlessui-state] {
             width: 100%;
-
         }
-        
+
         > button, button.dropdown {
             flex-grow: 1;
             width: 100%;
@@ -101,5 +142,53 @@ div.loadout {
 
     &:hover {
         transform: scale(1.05);
+    }
+
+    @media (max-width: 1200px) {
+        max-width: 33%;
+        width: 16rem;
+        height: 26rem;
+    }
+
+    @media (max-width: 992px) {
+        max-width: 50%;
+        width: 14rem;
+        height: 24rem;
+    }
+
+    @media (max-width: 768px) {
+        max-width: 100%;
+        width: auto;
+        height: auto;
+        gap: 1rem;
+
+        & > .card-title {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        & > .card-body {
+            padding: 1rem;
+
+            div.preview {
+                img {
+                    height: 10rem;
+                }
+            }
+
+            div.meta {
+                h1 {
+                    font-size: 1.25rem;
+                }
+
+                p {
+                    font-size: 0.9rem;
+                }
+            }
+        }
+
+        div.actions {
+            flex-direction: column;
+        }
     }
 }
