--- a/assets/styles/landingPage/loadouts/main.scss
+++ b/assets/styles/landingPage/loadouts/main.scss
@@ -49,21 +49,19 @@
             min-height: 10rem;
         }
 
-        .body {
+        & > .body {
             display: flex;
-            height: 100%;
+            flex-wrap: wrap;
             width: 100%;
             gap: 1rem;
-            flex-wrap: wrap;
 
             &:has(.collection) {
                 justify-content: space-between;
             }
 
-            div.collection, div.tag, div.loadout, div.loadout-new {
-                border: 1px solid $border-color;
-                padding: 0.75rem;
-                border-radius: 1rem;
+            div.collection, div.loadout, div.loadout-new {
+                flex: 1 1 calc(25% - 1rem);
+                min-width: 16rem;
             }
 
             div.load-message {
@@ -76,6 +74,25 @@
                 color: $muted-foreground;
             }
 
+            div.tag {
+                flex: 0 0 20%;
+                max-width: 20%;
+                box-sizing: border-box;
+                border: 1px solid $border-color;
+                padding: 0.75rem;
+                border-radius: 1rem;
+
+                @media (max-width: 768px) {
+                    flex: 0 0 50%;
+                    max-width: 50%;
+                }
+
+                @media (max-width: 576px) {
+                    flex: 0 0 100%;
+                    max-width: 100%;
+                }
+            }
+
             @import 'collection';
 
             @import 'tag';
@@ -85,13 +102,13 @@
             div.loadout-new {
                 background-color: $background;
                 box-shadow: 0px 0px 23px -12px rgba(0, 0, 0, 0.75);
-                width: 24%;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                align-items: center;
                 cursor: pointer;
                 font-size: 3rem;
+                width: 18rem;
+                height: 28rem;
+                display: flex;
+                align-items: center;
+                justify-content: center;
 
                 &:hover {
                     transform: scale(1.05);
